# template_airflow_dags_deployment

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: README_CI_CD.md  ci-cd.yml  component.yml
example/: .gitlab-ci.yml  README.md
example/.github/workflows/: ci.yml
example/src/: training_pipeline.py
src/: inference_pipeline.py  model_monitoring_pipeline.py  training_pipeline.py
template/: component.yml
template/.github/workflows/: component.yml
