[project]
name = "template_airflow_deployment"
version = "0.1.0"
description = "Exemple industriel de déploiement de DAGs Airflow avec gestion uv."
authors = ["Votre Nom <votre.email@example.com>"]
requires-python = ">=3.8"
dependencies = [
    "apache-airflow>=2.10.3",
]

[tool.uv]
# Configuration optionnelle pour uv
